fix issues with mobile version, fix aligning of services

--- a/public/assets/scss/layout/_appoinment.scss
+++ b/public/assets/scss/layout/_appoinment.scss
@@ -97,12 +97,25 @@
 
     }
 }
+.appoinment-area__wrapper {
+    display: flex;
+
+    @media #{$xs} {
+        flex-wrap: wrap;
+    }
+}
+
 .appoinment-thumb {
     height: 100%;
+    display: flex;
+    justify-content: center;
+    max-width: 100vw;
+    margin: 0;
     & img {
         width: 100%;
         height: 100%;
         object-fit: cover;
+        max-width: 100%;
     }
 }
 .appoint-thumb {
